modules/web/src/core/view/tree-view/file-tree.scss
.tree-node-tool-tip {
    background-color: black;
    border-radius: 0;
    font-size: 14px;
}

.file-tree {
    margin-bottom: 10px;
    .tree-node {
        color: #c7c7c7;
        cursor: pointer;
        overflow-y: hidden;
        &.empty {
            .tree-node-header {
                margin-left: 14px;
                .tree-node-arrow {
                    display: none;
                }
            }
        }
        .tree-node-header {
            white-space: nowrap;
            overflow-x: hidden;
            line-height: 24px;
            .tooltip {
                background-color: white;
            }
            &.active, &.active:hover  {
                .tree-node-highlight-row {
                    background: #232323;
                }
            }
            &:hover {
                .tree-node-highlight-row {
                    background: #2E2E2E;
                }
            }
            .tree-node-highlight-row {
                width: calc(100% + 600px);
                height: 24px;
                position: absolute;
                margin-left: -600px;
                z-index: -2;
            }
            .tree-node-focus-highlighter {
                position: absolute;
                top:0;
                left: 0;
                width: 100%;
                height: 100%;
                background-color: black;
                opacity: 0.5;
                z-index: 5;
            }
            .tree-node-name-input-wrapper {
                display: inline;
                .tree-node-name-input {
                    z-index: 6;
                    position:relative;
                    background-color: #3D3D3D;
                    padding-left: 5px;
                    padding-right: 5px;
                    border: 1px #f17b31 solid;
                    width: calc(100% - 20px);
                }
                &.error {
                    .tree-node-name-input {
                        border: 1px red solid;
                    }
                    .tree-node-name-input-error {
                        position: absolute;
                        word-wrap: normal;
                        white-space: normal;
                        padding: 5px;
                        z-index: 6;
                        border: 1px red solid;
                        background-color: #6D1717;
                    }
                }
            }
            .tree-node-loading {
                margin-right: 5px;
            }
            .tree-node-arrow {
                transition: all 0.1s;
                margin-right: 6px;
                display: inline-block;
                &::after {
                    content: '▾';
                }
            }
            .tree-node-icon {
                margin-right: 5px;
            }
            .tree-node-label {

            }
        }
        .tree-node-children {
            margin-left: 16px;
        }
        &.collapsed {
            .tree-node-header {
                .tree-node-arrow {
                    transform: rotate(-90deg);
                }
            }
            .tree-node-children {
                height: 0px;
            }
        }
    }
}

